# ftp_cracker

./: Cargo.toml  README.md  logins.txt  passwords.txt
src/: error.rs  main.rs
