[package]
name = "ftp_cracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
suppaftp = "5.3.1"
anyhow = "1.0.80"
thiserror = "1.0.57"
inline_colorization = "0.1.6"
rayon = "1.9.0"
tokio = { version = "1.36.0", features = ["full"] }